email required, css file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   method="POST">
   <label>
     Your email:
-    <input type="text" name="_replyto">
+    <input type="text" name="_replyto" required>
   </label>
   <label>
     Your message:
