--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <form
   action="https://formspree.io/f/mzbkgaad"
   method="POST">
+    <label>
+      Name:
+      <input type="text" name="name" required>
+    </label>
   <label>
     Your email:
     <input type="text" name="_replyto" required>
